@startuml
'https://plantuml.com/class-diagram

chats "1     " -- "0..*" userschats
chats "1" -- "0..*" messages
chats "1" --- "0..*" lastRead

userschats "0..*" -- "1 " users

messages "0..*  " -- "1" users
messages "1" -- "0..*   " lastRead

users "1" - "0..*" lastRead : "           "
users "1" -- "0..*" emails

class chats{
    id_chat int {PK}
    title varchar 50
}

class userschats{
    id_user int {PK FK}
    id_chat int {PK FK}
}

class messages {
    id_message int {PK}
    message varchar 8000
    timestamp bigint
    id_chat int {FK}
    id_user int {FK}

}

class lastRead{
    id_chat int {PK FK}
    id_message int {PK FK}
    id_user int {PK FK}
    timestamp bigint
}

class users {
    id_user int {PK}
    username varchar 50
    name varchar 500
    tlf varchar 15
}

class emails {
    id_email {PK}
    id_user {FK}
    email varchar 100
}

@enduml